# router/routes.go
@@ -9,6 +9,19 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @title           Swagger GO API
+// @version         1.0
+// @description     This is a example GO API.
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
+// @BasePath  /api/v1
+
+// @securityDefinitions.apikey bearerToken
+// @in header
+// @name Authorization
 func initializeRoutes(router *gin.Engine) {
 	handler.InitializeHandler()
 	basePath := "/api/v1"
